# PixLedLanguage

./: .gitignore  CMakeLists.txt  Makefile  testScript.txt  testScript2.txt
components/cpp_utils/: CMakeLists.txt  README.md
components/esp32_rgbw_led_driver/: CMakeLists.txt  Kconfig  LedStrip.cpp  component.mk
components/esp32_rgbw_led_driver/include/: LedStrip.h
components/examples/: CMakeLists.txt  example1.cpp  example2.cpp  example2_2.cpp  example3.cpp  example4.cpp  example5.cpp
components/examples/include/: examples.h
components/pixled/: CMakeLists.txt  component.mk
components/pixled/animation/: animation.cpp  animation.h
components/pixled/include/: pixled.h
components/pixled/layer/: layer.cpp  layer.h
components/pixled/operators/: operators.cpp  operators.h
components/pixled/operators/color/: color.cpp  color.h
components/pixled/operators/logic/: logic.cpp  logic.h
components/pixled/operators/math/: math.cpp  math.h
components/pixled/operators/numeric/: numeric.cpp  numeric.h
components/pixled/operators/pmath/: pmath.cpp  pmath.h
components/pixled/operators/sequence/: sequence.cpp  sequence.h
components/pixled/parser/: parser.h
components/pixled/scene/: scene.cpp  scene.h
components/pixled/scope/: scope.cpp  scope.h
components/pixled/sequence/: sequence.cpp  sequence.h
components/pixled/test/: CMakeLists.txt  test_pixled.cpp
main/: main.cpp
test/: CMakeLists.txt
test/main/: CMakeLists.txt  pixled_test.c
