idf_component_register(
	SRC_DIRS layer operators operators/numeric operators/color operators/pmath operators/logic operators/sequence animation scene scope out
	
	INCLUDE_DIRS include layer operators operators/numeric operators/color operators/pmath operators/logic operators/sequence animation scene scope out

	REQUIRES esp32_rgbw_led_driver
	)
